Fix numeric and centered props text alignment

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -40,6 +40,7 @@
                 }
                 &.is-numeric {
                     flex-direction: row-reverse;
+                    text-align: right;
                     .icon {
                         margin-left: 0;
                         margin-right: 0.5rem;
@@ -47,6 +48,7 @@
                 }
                 &.is-centered {
                     justify-content: center;
+                    text-align: center;
                 }
             }
             &.is-current-sort {
